--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <!-- 添加访问统计地图 -->
                 <div class="visitor-map">
                     <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
-                        <img src="//clustrmaps.com/map_v2.png?d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=ffffff&w=500" alt="Visitor Map" />
+                        <img src="//clustrmaps.com/map_v2.png?d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=ffffff&w=500&bg=fff8e7" alt="Visitor Map" />
                     </a>
                 </div>
             </div>
@@ -83,7 +83,7 @@
                 <div class="card-stack">
                     <!-- About Me card -->
                     <div id="about" class="card">
-                        <div class="card-header" style="background: #FF7675;">
+                        <div class="card-header" style="background: #FF9F43;">
                             <i class="fas fa-user"></i>
                             <h2>About Me</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -108,7 +108,7 @@
 
                     <!-- News card -->
                     <div id="news" class="card">
-                        <div class="card-header" style="background: #74B9FF;">
+                        <div class="card-header" style="background: #54A0FF;">
                             <i class="fas fa-newspaper"></i>
                             <h2>News</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -120,7 +120,7 @@
 
                     <!-- Education card -->
                     <div id="education" class="card">
-                        <div class="card-header" style="background: #A8E6CF;">
+                        <div class="card-header" style="background: #00B894;">
                             <i class="fas fa-graduation-cap"></i>
                             <h2>Education</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -132,7 +132,7 @@
 
                     <!-- Publications card -->
                     <div id="publications" class="card">
-                        <div class="card-header" style="background: #FFB6C1;">
+                        <div class="card-header" style="background: #FF6B6B;">
                             <i class="fas fa-book"></i>
                             <h2>Publications</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -144,7 +144,7 @@
                     
                     <!-- Internship card -->
                     <div id="internship" class="card">
-                        <div class="card-header" style="background: #9B59B6;">
+                        <div class="card-header" style="background: #A55EEA;">
                             <i class="fas fa-briefcase"></i>
                             <h2>Internship</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -156,7 +156,7 @@
 
                     <!-- Awards card -->
                     <div id="awards" class="card">
-                        <div class="card-header" style="background: #B2EBF2;">
+                        <div class="card-header" style="background: #2ED573;">
                             <i class="fas fa-award"></i>
                             <h2>Awards</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -168,7 +168,7 @@
                     
                     <!-- Projects card -->
                     <div id="projects" class="card">
-                        <div class="card-header" style="background: #81ECEC;">
+                        <div class="card-header" style="background: #FFA502;">
                             <i class="fas fa-project-diagram"></i>
                             <h2>Projects</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -180,7 +180,7 @@
 
                     <!-- Services card -->
                     <div id="services" class="card">
-                        <div class="card-header" style="background: #74B9FF;">
+                        <div class="card-header" style="background: #4834D4;">
                             <i class="fas fa-hands-helping"></i>
                             <h2>Services</h2>
                             <i class="fas fa-ellipsis-h"></i>
