--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="/assets/img/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="../js/components/Navbar.js"></script>
     <script src="js/components/PublicationList.js"></script>
@@ -86,7 +87,7 @@
                         <div class="card-header with-tabs" style="background: #FF9F43;">
                             <div class="header-content">
                                 <div class="header-left">
-                                    <i class="fas fa-user"></i>
+                            <i class="fas fa-user"></i>
                                     <h2>Profile</h2>
                                 </div>
                                 <div class="tabs">
@@ -95,25 +96,23 @@
                                     <button class="tab-button" data-tab="internship">Internship</button>
                                     <button class="tab-button" data-tab="service">Service</button>
                                 </div>
-                                <i class="fas fa-ellipsis-h"></i>
+                            <i class="fas fa-ellipsis-h"></i>
                             </div>
                         </div>
                         <div class="card-content">
                             <div class="tab-content">
                                 <div id="about-tab" class="tab-pane active">
-                                    <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
-                                        Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
-                                        under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
-                                        at the <a href="https://www.hkust-gz.edu.cn/zh/academics/?variant=zh-cn">Information Hub (INFH)</a>.
-                                        <br><br>
-                                        I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
-                                        During my undergraduate live, I started my research by working as the undergraduate research assistant in the Data-driven Intelligent Systems Laboratory of Jinan University. 
-                                        My undergraduate research direction is the optimization and application of the Broad Learning System (BLS). 
-                                        Before my graduation, I received the offer from HKUST(GZ) and successflly enrolled in it in the Fall 2023.
-                                        <br><br>
-                                        Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a> 
-                                        and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
-                                        My research interest comprises Database Management (DBMS), Muiti-agent System (MAS), Natural Language to SQL (NL2SQL) and Open-Source BLS. </p>
+                                    <h2 class="artistic-heading">Toward a Broader Future</h2>
+                            <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
+                                Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
+                                under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
+                                at the <a href="https://www.hkust-gz.edu.cn/zh/academics/?variant=zh-cn">Information Hub (INFH)</a>.
+                                <br><br>
+                                I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
+                                Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a> 
+                                and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
+                                <br><br>
+                                My research interest comprises NL2SQL, Large Language Models, Reinforcement Learning and Agents. I am also seeking for collaboration opportunities of these topics. Feel free to contact me if you are interested in these topics.</p>
                                 </div>
                                 <div id="education-tab" class="tab-pane">
                                     <education-list></education-list>
@@ -151,7 +150,7 @@
                             <publication-list></publication-list>
                         </div>
                     </div>
-                    
+
                     <!-- Awards card -->
                     <div id="awards" class="card">
                         <div class="card-header" style="background: #2ED573;">
