--- a/index.html
+++ b/index.html
@@ -41,33 +41,33 @@
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
                     </p>
-                    <div class="links">
-                        <a href="https://github.com/MPX0222" class="link-item">
+                    <div class="links-grid">
+                        <a href="https://github.com/MPX0222" class="social-link github">
                             <i class="fab fa-github"></i>
                             <span>GitHub</span>
                         </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="link-item">
+                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-link scholar">
                             <i class="fas fa-graduation-cap"></i>
                             <span>Google Scholar</span>
                         </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="link-item">
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-link linkedin">
                             <i class="fab fa-linkedin"></i>
                             <span>LinkedIn</span>
                         </a>
-                        <!-- <a href="https://gitlab.com/mpx0222" class="link-item">
-                            <i class="fab fa-gitlab"></i>
-                            <span>GitLab</span>
-                        </a> -->
-                    </div>
-                    <div class="cv-links">
-                        <a href="assets/cv/CV_en.pdf" class="cv-link">
-                            <i class="fas fa-file-alt"></i>
-                            <span>CV_en</span>
+                        <a href="https://huggingface.co/MPX0222forHF" class="social-link huggingface">
+                            <i class="fa-solid fa-circle-user"></i>
+                            <span>Hugging Face</span>
                         </a>
-                        <a href="assets/cv/CV_zh.pdf" class="cv-link">
+                    </div>
+                    <div class="link-grid">
+                        <a href="files\cv\CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
+                            <i class="fas fa-file-alt"></i>
+                            <span>Resume</span>
+                        </a>
+                        <!-- <a href="assets/cv/CV_zh.pdf" class="cv-link">
                             <i class="fas fa-file-alt"></i>
                             <span>CV_zh</span>
-                        </a>
+                        </a> -->
                     </div>
                 </div>
                 
