--- a/index.html
+++ b/index.html
@@ -41,29 +41,29 @@
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
                     </p>
-                    <div class="links-grid">
-                        <a href="https://github.com/MPX0222" class="social-link github">
+                    <div class="links">
+                        <a href="https://github.com/MPX0222" class="link-item">
                             <i class="fab fa-github"></i>
-                            <span>GitHub</span>
+                            GitHub
                         </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-link scholar">
+                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="link-item">
                             <i class="fas fa-graduation-cap"></i>
-                            <span>Google Scholar</span>
+                            Google Scholar
                         </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-link linkedin">
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="link-item">
                             <i class="fab fa-linkedin"></i>
-                            <span>LinkedIn</span>
+                            LinkedIn
                         </a>
-                        <a href="https://huggingface.co/MPX0222forHF" class="social-link huggingface">
-                            <i class="fa-solid fa-circle-user"></i>
-                            <span>Hugging Face</span>
+                        <a href="https://huggingface.co/MPX0222forHF" class="link-item">
+                            <i class="fas fa-robot"></i>
+                            Hugging Face
+                        </a>
+                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="link-item">
+                            <i class="fas fa-file"></i>
+                            Resume
                         </a>
                     </div>
                     <div class="link-grid">
-                        <a href="files\cv\CV2025_PeixianMA_CN-241224.pdf" class="cv-link">
-                            <i class="fas fa-file-alt"></i>
-                            <span>Resume</span>
-                        </a>
                         <!-- <a href="assets/cv/CV_zh.pdf" class="cv-link">
                             <i class="fas fa-file-alt"></i>
                             <span>CV_zh</span>
