--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
                 <div class="card-stack">
                     <!-- Profile card with tabs -->
                     <div id="profile" class="card">
-                        <div class="card-header with-tabs" style="background: #FF9F43;">
+                        <div class="card-header with-tabs" style="background: linear-gradient(135deg, #2d3436, #6c5ce7);">
                             <div class="header-content">
                                 <div class="header-left">
-                            <i class="fas fa-user"></i>
+                                    <i class="fas fa-user"></i>
                                     <h2>Profile</h2>
                                 </div>
                                 <div class="tabs">
@@ -96,7 +96,7 @@
                                     <button class="tab-button" data-tab="internship">Internship</button>
                                     <button class="tab-button" data-tab="service">Service</button>
                                 </div>
-                            <i class="fas fa-ellipsis-h"></i>
+                                <i class="fas fa-ellipsis-h"></i>
                             </div>
                         </div>
                         <div class="card-content">
@@ -129,7 +129,7 @@
 
                     <!-- News card -->
                     <div id="news" class="card">
-                        <div class="card-header" style="background: #54A0FF;">
+                        <div class="card-header" style="background: linear-gradient(135deg, #2d3436, #6c5ce7);">
                             <i class="fas fa-newspaper"></i>
                             <h2>News</h2>
                             <i class="fas fa-ellipsis-h"></i>
@@ -141,7 +141,7 @@
 
                     <!-- Publications card -->
                     <div id="publications" class="card">
-                        <div class="card-header" style="background: #FF6B6B;">
+                        <div class="card-header" style="background: linear-gradient(135deg, #2d3436, #6c5ce7);">
                             <i class="fas fa-book"></i>
                             <h2>Publications</h2>
                             <i class="fas fa-ellipsis-h"></i>
