--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
-                    <p class="profile-title">M.Phil. Student, HKUST(GZ)<br>Intern, IDEA Research</p>
+                    <p class="profile-title">M.Phil., HKUST(GZ)<br>Intern, IDEA Research</p>
                     <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
@@ -55,8 +55,8 @@
                             LinkedIn
                         </a>
                         <a href="https://huggingface.co/MPX0222forHF" class="link-item">
-                            <i class="fas fa-robot"></i>
-                            Hugging Face
+                            <i class="fas fa-grin-stars" style="color: #FFD700;"></i>
+                            HuggingFace
                         </a>
                         <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="link-item">
                             <i class="fas fa-file"></i>
@@ -103,16 +103,40 @@
                             <div class="tab-content">
                                 <div id="about-tab" class="tab-pane active">
                                     <h2 class="artistic-heading">Toward a Broader Future</h2>
-                            <p> Hello! I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
+                            <div class="research-interests" style="text-align: center; margin: 20px 0;">
+                                <!-- <h3 style="color: #333;">Research Interests</h3> -->
+                                <div style="display: flex; justify-content: center; gap: 30px; margin-top: 15px;">
+                                    <div style="display: flex; align-items: center;">
+                                        <i class="fas fa-database" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
+                                        <p style="margin: 0;">NL2SQL</p>
+                                    </div>
+                                    <div style="display: flex; align-items: center;">
+                                        <i class="fas fa-brain" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
+                                        <p style="margin: 0;">Large Language Models</p>
+                                    </div>
+                                    <div style="display: flex; align-items: center;">
+                                        <i class="fas fa-cogs" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
+                                        <p style="margin: 0;">Reinforcement Learning</p>
+                                    </div>
+                                    <div style="display: flex; align-items: center;">
+                                        <i class="fas fa-microchip" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
+                                        <p style="margin: 0;">Agents</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <p> I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
                                 Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
                                 under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
-                                at the <a href="https://www.hkust-gz.edu.cn/zh/academics/?variant=zh-cn">Information Hub (INFH)</a>.
+                                at the <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a>. 
                                 <br><br>
                                 I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
-                                Currently, I participate in <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a> 
-                                and work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
+                                Since 2025, I work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
                                 <br><br>
-                                My research interest comprises NL2SQL, Large Language Models, Reinforcement Learning and Agents. I am also seeking for collaboration opportunities of these topics. Feel free to contact me if you are interested in these topics.</p>
+                                My research interest comprises <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>NL2SQL, 
+                                <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models, 
+                                <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning and 
+                                <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agents. 
+                                I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.</p>
                                 </div>
                                 <div id="education-tab" class="tab-pane">
                                     <education-list></education-list>
