--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="../js/components/Navbar.js"></script>
     <script src="js/components/PublicationList.js"></script>
     <script src="js/components/InternshipList.js"></script>
@@ -55,11 +58,11 @@
                             LinkedIn
                         </a>
                         <a href="https://huggingface.co/MPX0222forHF" class="link-item">
-                            <i class="fas fa-grin-stars" style="color: #FFD700;"></i>
+                            <span class="emoji">🤗</span>
                             HuggingFace
                         </a>
                         <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="link-item">
-                            <i class="fas fa-file"></i>
+                            <i class="material-icons" style="color: #4CAF50; font-size: 20px;">description</i>
                             Resume
                         </a>
                     </div>
@@ -103,41 +106,35 @@
                             <div class="tab-content">
                                 <div id="about-tab" class="tab-pane active">
                                     <h2 class="artistic-heading">Toward a Broader Future</h2>
-                            <div class="research-interests" style="text-align: center; margin: 20px 0;">
-                                <!-- <h3 style="color: #333;">Research Interests</h3> -->
+                            <p>
+                                I am a M.Phil. student in Data Science and Analytics (DSA) at <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
+                                During this study period, I received guidance and supervision from <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>.
+                                Before that, I have received the B.Eng. degree in Intelligence Science and Technology from <a href="https://www.jnu.edu.cn/">Jinan University (JNU)</a> in 2023. 
+                                Since 2025, I worked as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy</a> and was under the supervision of <a href="https://soledad921.github.io/chengjin_xu/">Dr. Chengjin Xu</a>.
+                                I am honored to acknowledge and thank the organization I have joined during this two years:
+                            </p>
+                            <div class="research-units" style="text-align: center; margin: 20px 0;">
                                 <div style="display: flex; justify-content: center; gap: 30px; margin-top: 15px;">
                                     <div style="display: flex; align-items: center;">
-                                        <i class="fas fa-database" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
-                                        <p style="margin: 0;">NL2SQL</p>
+                                        <img src="images/dial.jpg" style="width: 24px; height: 24px; margin-right: 8px; object-fit: contain;">
+                                        <p style="margin: 0;"><a href="https://github.com/HKUSTDial">HKUST(GZ)-DIAL | 呆鹅实验室</a></p>
                                     </div>
                                     <div style="display: flex; align-items: center;">
-                                        <i class="fas fa-brain" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
-                                        <p style="margin: 0;">Large Language Models</p>
-                                    </div>
-                                    <div style="display: flex; align-items: center;">
-                                        <i class="fas fa-cogs" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
-                                        <p style="margin: 0;">Reinforcement Learning</p>
-                                    </div>
-                                    <div style="display: flex; align-items: center;">
-                                        <i class="fas fa-microchip" style="font-size: 24px; color: #666666; margin-right: 8px;"></i>
-                                        <p style="margin: 0;">Agents</p>
+                                        <img src="images/idea_logo.png" style="width: 40px; height: 24px; margin-right: 8px; object-fit: cover; object-position: center;">
+                                        <p style="margin: 0;"><a href="https://github.com/HKUSTDial">IDEA-FinAI | AI金融与深度学习研究中心</a></p>
                                     </div>
                                 </div>
                             </div>
-                            <p> I am a M.Phil. student of <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
-                                Now I am studying in <a href="https://www.hkust-gz.edu.cn/zh/academic/academic-programmes/master-of-philosophy-in-data-science-and-analytics-dsa">Data Science and Analytics (DSA)</a> 
-                                under the supervision of <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>, 
-                                at the <a href="https://github.com/HKUSTDial">The Hong Kong University of Science and Technology (Guangzhou) Data Intelligence and Analytics Lab @HKUST(GZ)-DIAL 香港科技大学（广州）-呆鹅实验室</a>. 
-                                <br><br>
-                                I have received the B.Eng. degree in Intelligence Science and Technology from <a href="">Jinan University (JNU)</a> in 2023. 
-                                Since 2025, I work as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy, Financial Artificial Intelligence Laboratory @IDEA-FinAI 粤港澳大湾区数字经济研究院-AI金融与深度学习研究中心</a>. 
-                                <br><br>
-                                My research interest comprises <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>NL2SQL, 
-                                <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models, 
-                                <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning and 
-                                <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agents. 
-                                I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.</p>
-                                </div>
+                            <p> 
+                                Currently, I am committed to exploring the application of simple and efficient artificial intelligence algorithms in various fields.
+                                My research interest comprises 
+                                <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>User-friendly Database Application (e.g, NL2SQL, NL2DSL, Chat2DS), 
+                                <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agent System, 
+                                <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models and Model Reasoning,
+                                <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning. 
+                                I am also seeking for opportunities of collaboration on these topics. Feel free to contact me if you are interested in these topics.
+                            </p>
+                            </div>
                                 <div id="education-tab" class="tab-pane">
                                     <education-list></education-list>
                                 </div>
