--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <!-- 添加访问统计地图 -->
                 <div class="visitor-map">
                     <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
-                        <img src="//clustrmaps.com/map_v2.png?d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=ffffff&w=500&bg=fff8e7" alt="Visitor Map" />
+                        <img src="//clustrmaps.com/map_v2.png?t=tt&d=zcsuUHck7poK49_TBP84eF736WoqI784nfHkHiIbIgQ&cl=a8a8a8&w=500&co=ffffff&ct=000000&w=300&h=200" alt="Visitor Map" />
                     </a>
                 </div>
             </div>
