--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
                                     </div>
                                     <div style="display: flex; align-items: center;">
                                         <img src="images/idea_logo.png" style="width: 40px; height: 24px; margin-right: 8px; object-fit: cover; object-position: center;">
-                                        <p style="margin: 0;"><a href="https://github.com/HKUSTDial">IDEA-FinAI | AI金融与深度学习研究中心</a></p>
+                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI | AI金融与深度学习研究中心</a></p>
                                     </div>
                                 </div>
                             </div>
                             <p> 
                                 Currently, I am committed to exploring the application of simple and efficient artificial intelligence algorithms in various fields.
                                 My research interest comprises 
-                                <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>User-friendly Database Application (e.g, NL2SQL, NL2DSL, Chat2DS), 
+                                <i class="fas fa-database" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>User-friendly Database Application (e.g., NL2SQL, NL2DSL, Chat2DS), 
                                 <i class="fas fa-microchip" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Agent System, 
                                 <i class="fas fa-brain" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Large Language Models and Model Reasoning,
                                 <i class="fas fa-cogs" style="font-size: 16px; color: #666666; margin-right: 8px;"></i>Reinforcement Learning. 
