--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
     <link rel="manifest" href="/assets/img/site.webmanifest">
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- 添加 Simple Icons 和 Iconify 图标库以支持更多社交媒体图标 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/sprites.svg">
+    <script src="https://code.iconify.design/3/3.1.1/iconify.min.js"></script>
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <script src="../js/components/Navbar.js"></script>
     <script src="js/components/PublicationList.js"></script>
@@ -44,26 +47,24 @@
                         <i class="fas fa-map-marker-alt"></i>
                         Guangzhou, China
                     </p>
-                    <div class="links">
-                        <a href="https://github.com/MPX0222" class="link-item">
+                    <div class="social-icons-grid">
+                        <a href="https://github.com/MPX0222" class="social-icon" title="GitHub">
                             <i class="fab fa-github"></i>
-                            GitHub
                         </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="link-item">
+                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-icon" title="Google Scholar">
                             <i class="fas fa-graduation-cap"></i>
-                            Google Scholar
                         </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="link-item">
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-icon" title="LinkedIn">
                             <i class="fab fa-linkedin"></i>
-                            LinkedIn
                         </a>
-                        <a href="https://huggingface.co/MPX0222forHF" class="link-item">
-                            <span class="emoji">🤗</span>
-                            HuggingFace
+                        <a href="https://huggingface.co/MPX0222forHF" class="social-icon" title="HuggingFace">
+                            <span style="font-size: 1.6rem;">🤗</span>
                         </a>
-                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="link-item">
-                            <i class="material-icons" style="color: #4CAF50; font-size: 20px;">description</i>
-                            Resume
+                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="social-icon" title="Resume">
+                            <i class="fas fa-file-alt"></i>
+                        </a>
+                        <a href="mailto:mpx0222@qq.com" class="social-icon" title="Email">
+                            <i class="fas fa-envelope"></i>
                         </a>
                     </div>
                     <div class="link-grid">
