--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                                     </div>
                                     <div style="display: flex; align-items: center;">
                                         <img src="images/idea_logo.png" style="width: 40px; height: 24px; margin-right: 8px; object-fit: cover; object-position: center;">
-                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI | AI金融与深度学习研究中心</a></p>
+                                        <p style="margin: 0;"><a href="https://github.com/IDEA-FinAI">IDEA-FinAI Lab & DataArc Tech Inc. | AI金融与深度学习研究中心 & 数创弧光</a></p>
                                     </div>
                                 </div>
                             </div>
