--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
-                    <p class="profile-title">M.Phil., HKUST(GZ)<br>Intern, IDEA Research</p>
+                    <p class="profile-title">M.Phil., HKUST(GZ)<br>Paradox.ai Inc.</p>
                     <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
@@ -146,7 +146,7 @@
                                 <div id="about-tab" class="tab-pane active">
                                     <h2 class="artistic-heading">Toward a Broader Future</h2>
                             <p>
-                                I am a M.Phil. student in Data Science and Analytics (DSA) at <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology Guangzhou (HKUSTGZ)</a>. 
+                                I received my M.Phil. degree in Data Science and Analytics (DSA) from <a href="https://www.hkust-gz.edu.cn/zh/">The Hong Kong University of Science and Technology, Guangzhou (HKUSTGZ)</a>. 
                                 During this study period, I received guidance and supervision from <a href="https://luoyuyu.vip">Prof. Yuyu Luo</a> and <a href="https://nantang.github.io/">Prof. Nan Tang</a>.
                                 Before that, I have received the B.Eng. degree in Intelligence Science and Technology from <a href="https://www.jnu.edu.cn/">Jinan University (JNU)</a> in 2023. 
                                 Since 2025, I worked as an intern in the <a href="https://www.idea.edu.cn/">International Digital Economy Academy</a> and was under the supervision of <a href="https://soledad921.github.io/chengjin_xu/">Dr. Chengjin Xu</a>.
