--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
                         <img src="images/avatar.jpg" alt="Profile Photo">
                     </div>
                     <h1 class="profile-name">Peixian MA</h1>
-                    <p class="profile-title">HKUST(GZ) / Paradox.ai Inc.<br>Master of Philosophy (M.Phil.)</p>
+                    <p class="profile-title">
+                        <img src="images/paradooxai_logo.jpg" alt="HKUST Logo" class="institution-logo"> ParadooxAI / <img src="assets/img/favicon-96x96.png" alt="HKUST Logo" class="institution-logo">HKUST(GZ)
+                        <br>
+                        Master of Philosophy in Data Science and Analytics
+                    </p>
                     <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
                     <p class="profile-location">
                         <i class="fas fa-map-marker-alt"></i>
