--- a/pages/publications.html
+++ b/pages/publications.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Detailed Publications | Peixian MA</title>
+    <title>Publications | Peixian MA</title>
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-192x192.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-512x512.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="../assets/img/apple-touch-icon.png">
@@ -12,187 +12,84 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&family=Pacifico&family=Satisfy&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Georama:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="../js/components/Navbar.js"></script>
     <script src="../js/components/DetailedPublicationList.js"></script>
     <style>
         .publications-container {
-            max-width: 1200px;
+            max-width: 900px;
             margin: 80px auto 0;
             padding: 2rem;
+            background-color: #f5f6fa;
+            min-height: calc(100vh - 80px);
         }
 
         .publications-header {
             text-align: center;
-            margin-bottom: 3rem;
+            margin-bottom: 2rem;
+            padding: 1.5rem 0;
         }
 
         .publications-header h1 {
-            font-size: 2.5rem;
+            font-size: 2.2rem;
+            font-weight: 600;
             color: #2d3436;
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, #2d3436, #6c5ce7);
-            -webkit-background-clip: text;
-            background-clip: text;
-            -webkit-text-fill-color: transparent;
+            margin-bottom: 0.5rem;
+            font-family: 'Dancing Script', cursive;
         }
 
         .publications-header p {
-            font-size: 1.1rem;
+            font-size: 1rem;
             color: #636e72;
-            max-width: 600px;
             margin: 0 auto;
+            line-height: 1.5;
+        }
+
+        .filter-section {
+            background: white;
+            border-radius: 6px;
+            padding: 1rem;
+            margin-bottom: 1.5rem;
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
         }
 
         .filter-bar {
             display: flex;
             justify-content: center;
-            gap: 1rem;
-            margin-bottom: 2rem;
+            gap: 0.5rem;
             flex-wrap: wrap;
         }
 
         .filter-button {
-            padding: 0.5rem 1.2rem;
-            border: none;
-            border-radius: 6px;
-            background: #f8f9fa;
-            color: #2d3436;
+            padding: 0.4rem 1rem;
+            border: 1px solid #e9ecef;
+            border-radius: 4px;
+            background: white;
+            color: #636e72;
             font-weight: 500;
+            font-size: 0.9rem;
             cursor: pointer;
-            transition: all 0.3s ease;
-        }
-
-        .filter-button:hover {
-            background: #e9ecef;
+            font-family: var(--font-family);
         }
 
         .filter-button.active {
-            background: linear-gradient(135deg, #2d3436, #6c5ce7);
+            background: #6c5ce7;
             color: white;
-        }
-
-        .publication-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 2rem;
-            margin-top: 2rem;
-        }
-
-        .publication-card {
-            background: white;
-            border-radius: 12px;
-            overflow: hidden;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            transition: all 0.3s ease;
-        }
-
-        .publication-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-        }
-
-        .publication-image {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-        }
-
-        .publication-content {
-            padding: 1.5rem;
-        }
-
-        .publication-title {
-            font-size: 1.2rem;
-            font-weight: 600;
-            color: #2d3436;
-            margin-bottom: 1rem;
-            line-height: 1.4;
-        }
-
-        .publication-meta {
-            display: flex;
-            flex-direction: column;
-            gap: 0.5rem;
-            margin-bottom: 1rem;
-        }
-
-        .publication-year {
-            color: #636e72;
-            font-size: 0.9rem;
-        }
-
-        .publication-venue {
-            display: inline-flex;
-            align-items: center;
-            padding: 0.25rem 0.6rem;
-            border-radius: 4px;
-            font-size: 0.85rem;
-            font-weight: 500;
-            color: white;
-            background: linear-gradient(135deg, #2d3436, #6c5ce7);
-        }
-
-        .publication-stats {
-            display: flex;
-            align-items: center;
-            gap: 1rem;
-            margin-top: 1rem;
-            padding-top: 1rem;
-            border-top: 1px solid #eee;
-        }
-
-        .stat-item {
-            display: flex;
-            align-items: center;
-            gap: 0.5rem;
-            color: #636e72;
-            font-size: 0.9rem;
-        }
-
-        .stat-item i {
-            color: #6c5ce7;
-        }
-
-        .publication-links {
-            display: flex;
-            gap: 0.5rem;
-            margin-top: 1rem;
-        }
-
-        .pub-link {
-            display: inline-flex;
-            align-items: center;
-            gap: 0.3rem;
-            padding: 0.5rem 1rem;
-            font-size: 0.9rem;
-            text-decoration: none;
-            border-radius: 6px;
-            background: #f8f9fa;
-            color: #2d3436;
-            transition: all 0.3s ease;
-        }
-
-        .pub-link:hover {
-            background: #e9ecef;
-        }
-
-        .pub-link i {
-            font-size: 1rem;
+            border-color: #6c5ce7;
         }
 
         @media (max-width: 768px) {
             .publications-container {
                 padding: 1rem;
+                margin-top: 60px;
             }
 
             .publications-header h1 {
-                font-size: 2rem;
+                font-size: 1.8rem;
             }
 
-            .publication-grid {
-                grid-template-columns: 1fr;
+            .filter-button {
+                padding: 0.4rem 0.8rem;
+                font-size: 0.85rem;
             }
         }
     </style>
@@ -201,34 +98,33 @@
     <nav-bar></nav-bar>
 
     <div class="publications-container">
-        <!-- <div class="publications-header">
-            <h1>Detailed Publications</h1>
-            <p>Explore my research publications in detail, including papers, preprints, and their impact.</p>
-        </div> -->
+        <div class="publications-header">
+            <h1>Publications</h1>
+            <p>A comprehensive list of my research publications</p>
+        </div>
 
-        <div class="filter-bar">
-            <button class="filter-button active" data-filter="all">All</button>
-            <button class="filter-button" data-filter="conference">Conference</button>
-            <button class="filter-button" data-filter="journal">Journal</button>
-            <button class="filter-button" data-filter="preprint">Preprint</button>
+        <div class="filter-section">
+            <div class="filter-bar">
+                <button class="filter-button active" data-filter="all">All</button>
+                <button class="filter-button" data-filter="conference">Conference</button>
+                <button class="filter-button" data-filter="journal">Journal</button>
+                <button class="filter-button" data-filter="preprint">Preprint</button>
+            </div>
         </div>
 
         <detailed-publication-list></detailed-publication-list>
     </div>
 
     <script>
-        // 添加过滤器功能
         document.addEventListener('DOMContentLoaded', function() {
             const filterButtons = document.querySelectorAll('.filter-button');
             const publicationList = document.querySelector('detailed-publication-list');
 
             filterButtons.forEach(button => {
                 button.addEventListener('click', () => {
-                    // 更新按钮状态
                     filterButtons.forEach(btn => btn.classList.remove('active'));
                     button.classList.add('active');
-
-                    // 触发过滤事件
+                    
                     const filter = button.dataset.filter;
                     publicationList.filterPublications(filter);
                 });
