--- a/index.html
+++ b/index.html
@@ -53,22 +53,22 @@
                         Guangzhou, China
                     </p>
                     <div class="social-icons-grid">
-                        <a href="https://github.com/MPX0222" class="social-icon" title="GitHub">
+                        <a href="https://github.com/MPX0222" class="social-icon" title="">
                             <i class="fab fa-github"></i>
                         </a>
-                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-icon" title="Google Scholar">
+                        <a href="https://scholar.google.com.hk/citations?hl=zh-CN&user=93URqlsAAAAJ" class="social-icon" title="">
                             <i class="fas fa-graduation-cap"></i>
                         </a>
-                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-icon" title="LinkedIn">
+                        <a href="https://www.linkedin.com/in/MPX0222/" class="social-icon" title="">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="https://huggingface.co/MPX0222forHF" class="social-icon" title="HuggingFace">
+                        <a href="https://huggingface.co/MPX0222forHF" class="social-icon" title="">
                             <span style="font-size: 1.6rem;">🤗</span>
                         </a>
-                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="social-icon" title="Resume">
+                        <a href="files\cv\CV2025_PeixianMA_CN.pdf" class="social-icon" title="">
                             <i class="fas fa-file-alt"></i>
                         </a>
-                        <a href="mailto:mpx0222@qq.com" class="social-icon" title="Email">
+                        <a href="mailto:mpx0222@qq.com" class="social-icon" title="">
                             <i class="fas fa-envelope"></i>
                         </a>
                     </div>
@@ -79,7 +79,6 @@
                         </a> -->
                     </div>
                 </div>
-                
                 <!-- 添加访问统计地图 -->
                 <div class="visitor-map">
                     <a href="https://clustrmaps.com/site/1c4bq" title="Visit tracker">
@@ -210,8 +209,7 @@
         <div class="quote-container">
             <i class="fas fa-quote-left quote-icon"></i>
             <blockquote>
-                <p class="quote-text">至于结果，只要足够认真虔诚，一定不会错的。</p>
-                <cite class="quote-author">— 2018.08.01 于广东仲元中学</cite>
+                <p class="quote-text">If I have to do this, I will do this right.</p>
             </blockquote>
             <i class="fas fa-quote-right quote-icon"></i>
         </div>
