--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Page | Peixian MA</title>
+    <title>Peixian MA</title>
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-192x192.png" sizes="32x32">
     <link rel="icon" type="image/png" href="/assets/img/web-app-manifest-512x512.png" sizes="16x16">
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
@@ -49,7 +49,10 @@
                         <br>
                         Data Science and Analytics
                     </p>
-                    <p class="profile-location"><i class="fas fa-envelope"></i> mpx0222@qq.com</p>
+                    <p class="profile-location">
+                        <i class="fas fa-envelope" style="font-size: 1.2rem;"></i> 
+                        mpx0222@qq.com
+                    </p>
                     <div class="social-icons-grid">
                         <a href="https://github.com/MPX0222" class="" title="">
                             <i class="fab fa-github" style="font-size: 1.6rem;"></i>
@@ -59,6 +62,9 @@
                         </a>
                         <a href="https://www.linkedin.com/in/MPX0222/" class="" title="">
                             <i class="fab fa-linkedin" style="font-size: 1.6rem;"></i>
+                        </a>
+                        <a href="files/cv/CV2025_PeixianMA_CN.pdf" class="" title="">
+                            <i class="fa-solid fa-pager" style="font-size: 1.6rem;"></i>
                         </a>
                     </div>
                     <div class="link-grid">
